# trapir-cli

./: Cargo.toml  README.md
src/: main.rs
src/cli/: args.rs  mod.rs
src/handler/: mod.rs  organizer.rs  summary.rs
src/image/: finder.rs  mod.rs
src/io/: files.rs  finder.rs  mod.rs  spinner.rs
