[package]
name = "trapir-cli"
version = "0.1.0"
edition = "2021"
authors = ["Heru Handika <herubiolog@gmail.com>"]
license = "MIT"
description = "Fast command line app for camera trap image analyses"
readme = "README.md"
homepage = "https://github.com/hhandika/trapir-cli"
repository = "https://github.com/hhandika/trapir-cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.*", features = ["cargo"] }
kamadak-exif = "0.5.*"
glob = "0.3.*"
walkdir = "2.*"
regex = "1.*"
lazy_static = "1.*"

[[bin]]
name = "trapir"
path = "src/main.rs"
